[package]
name = "ichiyo_ai"
version = "2.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/approvers/ichiyoAI"

[[bin]]
name = "ichiyo_ai"
path = "src/bin/main/main.rs"

[lib]
path = "src/lib/lib.rs"

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = "0.3"
envy = "0.4.2"
reqwest = "0.12.4"
serde_json = "1.0.116"
base64 = "0.22.1"
sentry = "0.32.3"
tokio-stream = "0.1"

[dependencies.serenity]
version = "0.12"
features = ["client", "gateway", "model", "cache", "rustls_backend", "framework", "standard_framework"]
default-features = false

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.tokio]
version = "1.37"
features = ["macros", "rt-multi-thread", "time"]
