[package]
name = "ichiyo_ai"
version = "2.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/approvers/ichiyoAI"

[[bin]]
name = "ichiyo_ai"
path = "src/bin/main/main.rs"

[lib]
path = "src/lib/lib.rs"

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
envy = "0.4.2"
serde_json = "1.0.116"
base64 = "0.22.1"
tokio-stream = "0.1.15"

[dependencies.reqwest]
version = "0.12.4"
features = ["rustls-tls", "charset", "http2", "macos-system-configuration"]
default-features = false

[dependencies.sentry]
version = "0.34.0"
# do not use `transport` feature. it pulls `native-tls`
features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls"]
default-features = false

[dependencies.serenity]
version = "0.12.1"
features = ["client", "gateway", "model", "cache", "rustls_backend", "framework", "standard_framework"]
default-features = false

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.tokio]
version = "1.38"
features = ["macros", "rt-multi-thread", "time"]
